# kaggle_titanic

./: .gitignore  README.md  main.py  pyproject.toml  rf_hyperparameter_tuning.py  submission.csv  tempname.md  user_passenger.py
.github/workflows/: main.yml
decision_tree/: decision_tree.py  decision_tree_train.py
models/: rf_titanic_model.pkl  titanic_pytorch_model.pth  titanic_svm_model.pkl
models/titanic_keras_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/titanic_keras_model/variables/: variables.data-00000-of-00001  variables.index
src/: decision_tree.py  decision_tree_train.py  evaluate_model.py  feature_selection.py  features.py  preprocess.py  svm_train.py  train.py  visualize.py
src/decision_tree/: decision_tree.py  decision_tree_train.py
src/decision_tree_hand_rolled/: decision_tree.py  decision_tree_train.py
src/feature_eng_pipeline/: data_preprocessing.py  feature_transformers.py
src/kaggle_titanic/: evaluate_model.py  feature_selection.py  features.py  preprocess.py  visualize.py
src/kaggle_titanic/base_model/: base_model.py
src/kaggle_titanic/decision_tree_hand_rolled/: decision_tree.py  decision_tree_train.py
src/kaggle_titanic/dev_tools/: lint_code.py
src/kaggle_titanic/naive_bayes/: bayes_main.py
src/naive_bayes/: bayes_main.py
src/pytorch/: pytorch_binary.py
src/random_forest/: rf_main.py  rf_train.py
src/random_forest_classifier/: rf_main.py
src/rfc_hand_rolled/: random_forest.py
src/svm/: svm_train.py
src/tf_keras_sequential/: tf_keras_sequential_main.py
tests/: test_feature_engineering.py
(+5 files in other folders)
