[tool.poetry]
name = "kaggle-titanic"
version = "0.1.0"
description = ""
authors = ["DeepBlockDeepak <jordan.medina1729@gmail.commit>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
kaggle = "^1.5.16"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
ruff = "^0.0.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
